// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PriceField /> renders with hint 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
      <p
        className="MuiFormHelperText-root-35"
      >
        Lorem ipsum
      </p>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceField /> renders with label 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <label
        className="MuiFormLabel-root-29 MuiInputLabel-root-23 MuiInputLabel-formControl-24 MuiInputLabel-animated-27"
        data-shrink={false}
        htmlFor="price_min"
      >
        Lorem ipsum
      </label>
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceField /> renders with label and hint 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <label
        className="MuiFormLabel-root-29 MuiInputLabel-root-23 MuiInputLabel-formControl-24 MuiInputLabel-animated-27"
        data-shrink={false}
        htmlFor="price_min"
      >
        Lorem
      </label>
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
      <p
        className="MuiFormHelperText-root-35"
      >
        Ipsum
      </p>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceField /> renders with no value 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value=""
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceField /> renders with value 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="10"
        />
        <span />
      </div>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="30"
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceField /> renders with value, label and error 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <label
        className="MuiFormLabel-root-29 MuiFormLabel-error-32 MuiInputLabel-root-23 MuiInputLabel-formControl-24 MuiInputLabel-animated-27 MuiInputLabel-shrink-26"
        data-shrink={true}
        htmlFor="price_min"
      >
        Lorem
      </label>
      <div
        className="MuiInput-root-9 MuiInput-error-14 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13"
      >
        <input
          aria-invalid={true}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="10"
        />
        <span />
      </div>
      <p
        className="MuiFormHelperText-root-35 MuiFormHelperText-error-36"
      >
        Ipsum
      </p>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-error-14 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={true}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="30"
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PriceField /> renders with value, label and hint 1`] = `
<div
  className="Component-widgetContainer-4"
>
  <div
    className="Component-inputContainer-1"
  >
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <label
        className="MuiFormLabel-root-29 MuiInputLabel-root-23 MuiInputLabel-formControl-24 MuiInputLabel-animated-27 MuiInputLabel-shrink-26"
        data-shrink={true}
        htmlFor="price_min"
      >
        Lorem
      </label>
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_min"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="10"
        />
        <span />
      </div>
      <p
        className="MuiFormHelperText-root-35"
      >
        Ipsum
      </p>
    </div>
    <span
      className="Component-separator-3"
    >
      -
    </span>
    <div
      className="MuiFormControl-root-5"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="MuiInput-root-9 MuiInput-fullWidth-16 MuiInput-formControl-10 MuiInput-underline-13 Component-pullDown-2"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-17 MuiInput-inputType-21"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="price_max"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="number"
          value="30"
        />
        <span />
      </div>
    </div>
  </div>
</div>
`;
